# asynctask

./: .gitignore  BUILD.sh  CMakeLists.txt  README.md  TOTO.md  main.cpp
include/: reader.hpp  reader_test.hpp  task.hpp  task_test.hpp  taskmanager.hpp  utils.hpp  wrapper.hpp
src/: reader_test.cpp  taskmanager.cpp
test/: main.cpp  reader_test.hpp  task_test.cpp  task_test.hpp
